@@ -24,7 +24,7 @@ import org.apache.solr.request.SolrQueryRequest;
 import java.util.List;
 
 /**
- * A merge indexes command encapsulated in an object.
+ * A split index command encapsulated in an object.
  *
  * @since solr 1.4
  *
@@ -35,13 +35,15 @@ public class SplitIndexCommand extends UpdateCommand {
   public List<SolrCore> cores;  // either paths or cores should be specified
   public List<DocRouter.Range> ranges;
   public DocRouter router;
+  public String routeFieldName;
 
-  public SplitIndexCommand(SolrQueryRequest req, List<String> paths,  List<SolrCore> cores, List<DocRouter.Range> ranges, DocRouter router) {
+  public SplitIndexCommand(SolrQueryRequest req, List<String> paths, List<SolrCore> cores, List<DocRouter.Range> ranges, DocRouter router, String routeFieldName) {
     super(req);
     this.paths = paths;
     this.cores = cores;
     this.ranges = ranges;
     this.router = router;
+    this.routeFieldName = routeFieldName;
   }
 
   @Override
